# small-agent

./: .gitignore  README.md  pyproject.toml  settings.template.json
src/small_agent/: __init__.py  agent.py  cli.py  config.py  harness.py
src/small_agent/hooks/: __init__.py  executor.py
src/small_agent/llm/: __init__.py  bailian.py  base.py
src/small_agent/mcp/: __init__.py  client.py
src/small_agent/skills/: __init__.py  registry.py
src/small_agent/skills/builtin/: __init__.py  clear.py  config.py  help.py  tools.py
src/small_agent/tools/: __init__.py  registry.py
src/small_agent/tools/builtin/: __init__.py  file.py  http.py  shell.py  weather.py
tasks/: lessons.md  todo.md
tests/: test_config.py  test_hooks.py  test_llm.py  test_mcp.py  test_skills.py  test_tools.py
