[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "small-agent"
version = "0.1.0"
description = "A CLI agent powered by 阿里云百炼 (Alibaba Cloud Bailian) with harness engineering patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "User" }
]
dependencies = [
    "typer>=0.9.0",
    "dashscope>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
small-agent = "small_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/small_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
